client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --bar-height: 4px;
  --bar-width: 36px;
  --bar-gap: 6px;
  --hamburger-height: calc(var(--bar-height) * 3 + var(--bar-gap) * 2);
  --animation-timing: 200ms ease-in-out;
}

.light {
  --text-primary: black;
  --text-secondary: #454ade;
  --bg-primary: white;
  --bg-secondary: #dcdcdc;
  --bg-chatBox-me: #454ade;
  --text-chatBox-me: white;
  --bg-chatBox-notMe: darkgrey;
  --text-chatBox-notMe: white;
  --button-text: white;
  --button-color: #454ade;
}

.dark {
  --text-primary: #ffffff;
  --text-secondary: #454ade;
  --bg-secondary: #202124;
  --bg-primary: #28292a;
  --bg-chatBox-me: #454ade;
  --text-chatBox-me: white;
  --bg-chatBox-notMe: darkgrey;
  --text-chatBox-notMe: white;
  --button-text: white;
  --button-color: #454ade;
}

.red {
  --text-primary: black;
  --text-secondary: white;
  --bg-primary: #ffc0cb;
  --bg-secondary: #cf4f84;
  --bg-chatBox-me: #454ade;
  --text-chatBox-me: white;
  --bg-chatBox-notMe: #a9a9a9;
  --text-chatBox-notMe: white;
  --button-text: white;
  --button-color: #bd2665;
}

.dessert {
  --text-primary: rgb(43, 45, 66);
  --text-secondary: rgb(169, 206, 244);
  --bg-primary: rgb(242, 226, 186);
  --bg-secondary: rgb(43, 45, 66);
}

h1 {
  @apply text-textSecondary;
}

input,
textarea {
  color: black;
}

#app-nav-bar button:hover {
  text-decoration: underline;
}

.controls {
  display: grid;
  place-items: center;
  aspect-ratio: 1 / 1;
  border-radius: 0.5rem;
  margin: 0px;
  padding: 0px;
}

.my-button {
  border-radius: 0.5rem;
  padding: 0.5rem;
  @apply bg-buttonColor;
  @apply text-buttonText;
  cursor: pointer;
  margin-right: 0.5rem;
}

.row-container {
  display: flex;
  flex-direction: column;
}

.roll-hist-bingo {
  display: flex;
  align-items: center;
  justify-content: center;
  max-width: 4rem;
  width: 3rem;
  min-width: 2rem;
  font-weight: bold;
  border-radius: 10%;
  aspect-ratio: 1 / 1;
  border: 2px solid;
  @apply border-bgPrimary;
  @apply bg-bgSecondary;
}

.roll-hist-container {
  max-height: 100%;
  display: flex;
  flex-wrap: wrap;
}

.board-row {
  display: flex;
}

.bingo {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  font-size: larger;
  font-weight: bold;
  border-radius: 10%;
  aspect-ratio: 1 / 1;
  border: 2px solid;
  @apply border-bgPrimary;
  @apply bg-bgSecondary;
}

.bingo:hover {
  cursor: pointer;
  animation: 1.5s hoverAnimation linear infinite;
  border: 2px solid;
  @apply border-bgPrimary;
  @apply shadow-lg;
}

.roll-hist-bingo:hover {
  cursor: pointer;
  animation: 1.5s hoverAnimation linear infinite;
  border: 2px solid;
  @apply border-bgPrimary;
}

@keyframes hoverAnimation {
  0% {
    transform: scale(1);
    rotate: 0deg;
    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
  }
  25% {
    rotate: 5deg;
  }
  50% {
    transform: scale(1.2);
    rotate: 0deg;
    @apply shadow-lg;
  }
  75% {
    rotate: -5deg;
  }
  100% {
    transform: scale(1);
    rotate: 0deg;
    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
  }
}

.highlight-obj {
  @apply bg-textSecondary;
  @apply text-buttonText;
}

.current-roll {
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: fit-content;
  font-weight: bold;
  border-radius: 10%;
  aspect-ratio: 1 / 1;
  border: 2px solid;
  @apply bg-textSecondary;
  @apply text-buttonText;
}

/* Define the animation */
@keyframes hintPulse {
  0% {
    transform: scale(1);
  }
  50% {
    background-color: red;
    transform: scale(1.2);
  }
  100% {
    transform: scale(1);
  }
}

.hint-pulse {
  animation: hintPulse 1s ease-in-out;
}

.chevron-menu {
  display: flex;
  margin-left: auto;
  padding-top: 2rem;
}

.chevron-menu::before,
.chevron-menu input {
  --bar-height: 4px;
  --bar-width: 24px;
  --animation-timing: 200ms ease-in-out;
  content: "";
  width: var(--bar-width);
  height: var(--bar-height);
  @apply bg-textPrimary;
  border-radius: 9999px;
  transition: opacity var(--animation-timing), width var(--animation-timing),
    rotate var(--animation-timing), translate var(--animation-timing);
}

.chevron-menu input {
  appearance: none;
  padding: 0;
  margin: 0;
  outline: none;
  pointer-events: none;
  transform-origin: center;
  transform: rotate(45deg);
  translate: calc(var(--bar-width) / -5);
}

.chevron-menu::before {
  transform-origin: center;
  transform: rotate(-45deg);
  translate: calc(var(--bar-width) / 5);
}

.chevron-menu:has(input:checked)::before {
  transform-origin: center;
  rotate: 90deg;
}

.chevron-menu:has(input:checked) input {
  transform-origin: center;
  rotate: -90deg;
}

#hamburger-menu {
  --x-width: calc(var(--hamburger-height) * 1.41421356237);
  gap: var(--bar-gap);
}

#hamburger-menu::before,
#hamburger-menu::after,
#hamburger-menu input {
  content: "";
  width: var(--bar-width);
  height: var(--bar-height);
  border-radius: 9999px;
  transform-origin: left center;
  @apply bg-textPrimary;
  transition: opacity var(--animation-timing), width var(--animation-timing),
    rotate var(--animation-timing), translate var(--animation-timing);
}

#hamburger-menu input:checked {
  width: 0;
  opacity: 0;
}

#hamburger-menu:has(input:checked)::before {
  rotate: 45deg;
  width: var(--x-width);
  translate: 0 calc(var(--bar-height) / -2);
}

#hamburger-menu:has(input:checked)::after {
  rotate: -45deg;
  width: var(--x-width);
  translate: 0 calc(var(--bar-height) / 2);
}

#sidebar {
  transition: transform var(--animation-timing), opacity var(--animation-timing);
  transform: translateY(-100%);
  opacity: 0;
  padding-top: calc(var(--hamburger-height) + 3rem);
  position: absolute;
}

#theme-sidebar {
  transition: transform var(--animation-timing), opacity var(--animation-timing);
  transform: translateY(-100%);
  opacity: 0;
  padding-top: calc(var(--hamburger-height) + 3rem);
  right: 0;
  position: absolute;
}

#hamburger-menu:has(input:checked) + #sidebar {
  transform: translateY(0%);
  opacity: 1;
}

.chevron-menu:has(input:checked) + #theme-sidebar {
  transform: translateY(0%);
  opacity: 1;
}

/* Chat Box animation stuff */
#chatBox {
  overflow: hidden;
  transition: height var(--animation-timing);
}

#chatBox-tray {
  max-height: 0;
  overflow: hidden;
  transition: max-height var(--animation-timing);
}

#chatBox-menu:has(input:checked) + #chatBox {
  height: auto;
}

#chatBox-menu:has(input:checked) + #chatBox-tray {
  max-height: 500px;
}

